<resources>
    <string name="app_name">RouterTCP</string>
    <string name="current_routes">Текущие маршруты</string>
    <string name="ip_address">IP-адрес</string>
    <string name="tcp_port">TCP-порт</string>
    <string name="serial_number">Серийный номер ПУ</string>
    <string name="connection_status">Статус</string>
    <string name="upButton">Добавить</string>
    <string name="downButton">Отмена</string>
    <string name="spaces">"   "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="delete_confirmation">Вы уверены, что хотите удалить маршрут?</string>
    <string name="cancel">Отмена</string>
    <string name="edit_route">Редактирование маршрута</string>
    <string name="invalid_serial">Неправильно введен серийный номер</string>
    <string name="invalid_tcp">Неправильно введен TCP-порт</string>
    <string name="invalid_ip">Неправильно введен IP-адрес</string>
    <string name="start_text">Для входа в приложение отсканируйте ваш QR Code</string>
    <string name="scan">Отсканировать</string>
    <string name="camera_qr">Наведите камеру на QR-код</string>
    <string name="qr_error">Ошибка при сканировании QR-кода</string>
    <string name="button">Button</string>

</resources>