<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.main.add_and_edit_routes.AddingEditRoutesActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/edit_route"
        android:textColor="@color/dark_blue"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/background_white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:autoSizeTextType="none"
        android:background="@drawable/rectangle_with_blue_strokes"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/downButton"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/changeable_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeable_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:autoSizeTextType="none"
        android:background="@drawable/blue_rectangle"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/upButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button" />

    <TextView
        android:id="@+id/ip_address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/ip_address"
        android:textColor="@color/dark_gray_main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_rec"
        android:elevation="5dp"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_address_text_view" />

    <TextView
        android:id="@+id/invalidIPAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/invalid_ip"
        android:textColor="@color/red"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_address" />

    <TextView
        android:id="@+id/tcp_port_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/tcp_port"
        android:textColor="@color/dark_gray_main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_address" />

    <EditText
        android:id="@+id/tcp_port"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_rec"
        android:elevation="5dp"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tcp_port_text_view" />


    <TextView
        android:id="@+id/invalidTCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/invalid_tcp"
        android:textColor="@color/red"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tcp_port" />

    <TextView
        android:id="@+id/serial_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="50dp"
        android:text="@string/serial_number"
        android:textColor="@color/dark_gray_main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tcp_port" />

    <EditText
        android:id="@+id/serial_number"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:padding="5dp"
        android:background="@drawable/edit_text_rec"
        android:elevation="5dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serial_number_text_view" />


    <TextView
        android:id="@+id/invalidSerialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:text="@string/invalid_serial"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serial_number" />


</androidx.constraintlayout.widget.ConstraintLayout>