<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.main.main_screen.MainScreenWithTableActivity">


    <TextView
        android:id="@+id/currentRoutesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/current_routes"
        android:textColor="@color/dark_blue"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/background_white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentRoutesTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/route_table_rec_background"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/ip_address_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/ip_address"
                android:textColor="@color/dark_gray_main_text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/tcp_port"
                android:textColor="@color/dark_gray_main_text" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/serial_number"
                android:textColor="@color/dark_gray_main_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:text="@string/connection_status"
                android:textColor="@color/dark_gray_main_text" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRouteTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addRouteButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/add_route"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>